[gd_scene load_steps=2 format=2]

[ext_resource path="res://UserInterface/UISpriteSelector.gd" type="Script" id=2]

[node name="UISpriteSelector" type="Control"]
margin_right = 180.0
margin_bottom = 100.0
rect_min_size = Vector2( 180, 100 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviousButton" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -29.5
margin_right = 30.0
margin_bottom = 29.5
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -60.0
margin_top = -50.0
margin_right = 60.0
margin_bottom = 50.0
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -29.5
margin_bottom = 29.5
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PreviousButton" to="." method="_on_PreviousButton_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_NextButton_pressed"]
